Added TensorFlow Neural Network

--- a/notebooks/multi-label_classificaton_problems/enzyme_substrate_multi-label_classification.ipynb
+++ b/notebooks/multi-label_classificaton_problems/enzyme_substrate_multi-label_classification.ipynb
@@ -31,13 +31,13 @@
     "- [ 4 - Model Training](#4)\n",
     "- [ 5 - Model Comparison](#5)\n",
     "- [ 6 - Model Tuning](#6)\n",
-    "- [ 7 - Model Diagnostic](#7)\n",
+    "- [ 7 - Neural Network](#7)\n",
     "- [ 8 - Challenge Submission](#8)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "5f523ec1-ecfc-4a78-afa3-9bb76cb7ad54",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,6 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import confusion_matrix, classification_report\n",
     "from sklearn.metrics import roc_curve, roc_auc_score\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.model_selection import learning_curve, LearningCurveDisplay, ShuffleSplit\n",
@@ -70,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "fb243b9e-a75d-41c1-a21e-941c5feb23b8",
    "metadata": {},
    "outputs": [],
@@ -101,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 9,
    "id": "55e143f9-1cf3-4e88-94d7-cd8ff2581a01",
    "metadata": {},
    "outputs": [],
@@ -111,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 10,
    "id": "45a407e2-cc7b-4d23-9f56-185da28f978a",
    "metadata": {},
    "outputs": [],
@@ -1200,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 11,
    "id": "afc8bfbd-f535-41d7-82f9-94ceb7464c27",
    "metadata": {},
    "outputs": [],
@@ -1226,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 12,
    "id": "9f83f3c1-7bd5-413a-be0b-84bd3abb13d5",
    "metadata": {},
    "outputs": [],
@@ -1269,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 13,
    "id": "e1a4f3ca-f681-4ea6-a247-bcf43cc32dbb",
    "metadata": {},
    "outputs": [],
@@ -1280,27 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "cc80d7dd-de36-4773-843e-fbbf9020f96c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(14838, 31)\n",
-      "(14838, 37)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(transformed_train_data.shape)  # (14838, num_features)\n",
-    "print(train_data.shape)  # (14838, num_columns)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 15,
    "id": "32dd93bb-bc8c-4765-a3cb-a63cacdbbdcc",
    "metadata": {},
    "outputs": [],
@@ -1324,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 21,
    "id": "4287434b-8edf-42dd-8f31-be7742df5541",
    "metadata": {},
    "outputs": [],
@@ -1334,112 +1313,6 @@
     "\n",
     "# Initialize DataFrame of model performance\n",
     "performance = pd.DataFrame(columns=metrics)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "48a4a026-075f-47c3-842c-12a5689dbb90",
-   "metadata": {},
-   "source": [
-    "## Random Forest Classifier"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 114,
-   "id": "d0aed5ba-505b-44ac-9cee-8bd894627766",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "AUC_ROC for class 1: 0.5943325170150061\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Instantiate a RandomForestClassifier model\n",
-    "model_rfc = RandomForestClassifier(n_estimators=50, \n",
-    "                                   max_depth=3, \n",
-    "                                   class_weight='balanced', \n",
-    "                                   random_state=seed)\n",
-    "\n",
-    "# Fit model to the train set\n",
-    "model_rfc.fit(X_train, y_train)\n",
-    "\n",
-    "# Predict probabilities for each class\n",
-    "y_pred = model_rfc.predict(X_test)\n",
-    "\n",
-    "# Compute AUC_ROC metric\n",
-    "auc_roc_rfc = roc_auc_score(y_test, y_pred)\n",
-    "\n",
-    "print('AUC_ROC for class 1: {}'.format(auc_roc_rfc))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 122,
-   "id": "a7c89648-0861-4195-9f79-36c2bfd58bfe",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "AUC_ROC for class 1: 0.38153498219093923\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Instantiate a RandomForestClassifier model\n",
-    "model_rfc = RandomForestClassifier(n_estimators=50, \n",
-    "                                   max_depth=3, \n",
-    "                                   class_weight='balanced', \n",
-    "                                   random_state=seed)\n",
-    "\n",
-    "# Fit model to the train set\n",
-    "model_rfc.fit(X_train, y_train)\n",
-    "\n",
-    "# Predict probabilities for each class\n",
-    "y_pred = model_rfc.predict_proba(X_test)[0]\n",
-    "\n",
-    "# Compute AUC_ROC metric\n",
-    "auc_roc_rfc = roc_auc_score(y_test, y_pred)\n",
-    "\n",
-    "print('AUC_ROC for class 1: {}'.format(auc_roc_rfc))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 121,
-   "id": "ebcc628d-8577-40e1-9ea6-263e9abba0a4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 121,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(model_rfc.predict_proba(X_test)[0][0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "id": "19e1151d-4b3f-4e31-9a1d-85904ab5552b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Update 'performance' DataFrame\n",
-    "performance.loc['Random Forest Classifier'] = [auc_roc_rfc]"
    ]
   },
   {
@@ -1583,14 +1456,15 @@
    "id": "60e93eb5-ba05-4a4e-9e76-a12cbc0ebc86",
    "metadata": {},
    "source": [
-    "## Neural Network\n",
+    "<a name=\"7\"></a>\n",
+    "# Neural Network\n",
     "\n",
     "Building a simple neural network with TenforFlow and Keras. Hidden layers with ReLU as activation funciton and the last layer with a linear activation function (instead of a sigmoid, to increase numerical accuracy of prefictions. The probabilities will be calculated later with BinaryCrossentropy function, setting from_logits=True while compiling the model."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "16263328-0eab-409b-a297-09ac1158f570",
    "metadata": {},
    "outputs": [],
@@ -1601,12 +1475,99 @@
     "# Define Neural Network Architecture\n",
     "model_tf = Sequential(\n",
     "    [               \n",
-    "        Dense(26, input_shape=(13,), activation='relu', name='L1'),\n",
-    "        Dense(13, activation='relu', name='L3'),\n",
-    "        Dense(7, activation='relu', name='L5'),\n",
-    "        Dense(1, activation='linear', name='L6'),\n",
+    "        Dense(70, activation='relu', name='L1'),\n",
+    "        Dense(50, activation='relu', name='L2'),\n",
+    "        Dense(30, activation='relu', name='L3'),\n",
+    "        Dense(30, activation='relu', name='L4'),\n",
+    "        Dense(15, activation='relu', name='L5'),\n",
+    "        Dense(7, activation='relu', name='L6'),\n",
+    "        Dense(2, activation='linear', name='L7'),\n",
     "    ]\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "50df5c57-8d2b-41a2-b078-edf0bccf192c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "311/311 [==============================] - 3s 2ms/step - loss: 0.5677\n",
+      "Epoch 2/10\n",
+      "311/311 [==============================] - 1s 2ms/step - loss: 0.5464\n",
+      "Epoch 3/10\n",
+      "311/311 [==============================] - 1s 2ms/step - loss: 0.5430\n",
+      "Epoch 4/10\n",
+      "311/311 [==============================] - 1s 2ms/step - loss: 0.5413\n",
+      "Epoch 5/10\n",
+      "311/311 [==============================] - 1s 2ms/step - loss: 0.5405\n",
+      "Epoch 6/10\n",
+      "311/311 [==============================] - 1s 2ms/step - loss: 0.5397\n",
+      "Epoch 7/10\n",
+      "311/311 [==============================] - 1s 2ms/step - loss: 0.5395\n",
+      "Epoch 8/10\n",
+      "311/311 [==============================] - 1s 2ms/step - loss: 0.5395\n",
+      "Epoch 9/10\n",
+      "311/311 [==============================] - 1s 2ms/step - loss: 0.5387\n",
+      "Epoch 10/10\n",
+      "311/311 [==============================] - 1s 2ms/step - loss: 0.5395\n",
+      "CPU times: total: 15.7 s\n",
+      "Wall time: 9.18 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "model_tf.compile(\n",
+    "    loss=tf.keras.losses.BinaryCrossentropy(from_logits=True),\n",
+    "    optimizer=tf.keras.optimizers.Adam(learning_rate=0.001),\n",
+    ")\n",
+    "\n",
+    "history = model_tf.fit(\n",
+    "    X_train, \n",
+    "    y_train,\n",
+    "    epochs=10\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "4d13fef7-f392-4705-886b-1a3195ba2a15",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "154/154 [==============================] - 0s 2ms/step\n",
+      "AUC_ROC: 0.633751402427605\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Generate Prediction\n",
+    "y_pred_tf = model_tf.predict(X_test)\n",
+    "\n",
+    "roc_auc_tf = roc_auc_score(y_test, y_pred_tf)\n",
+    "print('AUC_ROC: {}'.format(roc_auc_tf))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "7ec44cc5-c543-4214-857d-66c7406fe3a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Update 'performance' DataFrame\n",
+    "performance.loc['TF Neural Network'] = [roc_auc_tf]"
    ]
   },
   {
@@ -1616,6 +1577,132 @@
    "source": [
     "<a name=\"8\"></a>\n",
     "# Challenge Submission"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "eadebe1b-9223-4efc-8564-ad0b3ff5a1a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "310/310 [==============================] - 0s 1ms/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Generate predictions with test set with the besst performing model (based on ROC_AUC)\n",
+    "submission_predictions = model_tf.predict(transformed_test_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "004c7c80-25db-4c75-b71e-9ef061839115",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create submission DataFrame\n",
+    "submission = pd.DataFrame({'id': test_data.index, 'EC1': submission_predictions[:, 0], 'EC2': submission_predictions[:, 1]})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "4376dec8-a154-4217-855a-93557a80895c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>EC1</th>\n",
+       "      <th>EC2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>14838</td>\n",
+       "      <td>-0.168258</td>\n",
+       "      <td>1.386827</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>14839</td>\n",
+       "      <td>1.542996</td>\n",
+       "      <td>1.413808</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>14840</td>\n",
+       "      <td>1.417135</td>\n",
+       "      <td>1.305477</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>14841</td>\n",
+       "      <td>1.347563</td>\n",
+       "      <td>1.665012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>14842</td>\n",
+       "      <td>1.195863</td>\n",
+       "      <td>1.089311</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      id       EC1       EC2\n",
+       "0  14838 -0.168258  1.386827\n",
+       "1  14839  1.542996  1.413808\n",
+       "2  14840  1.417135  1.305477\n",
+       "3  14841  1.347563  1.665012\n",
+       "4  14842  1.195863  1.089311"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "submission.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "2d9352eb-776f-436a-a1e1-3ff3ea8dbebc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write CSV File\n",
+    "submission.to_csv('./submission.csv', index=False)"
    ]
   }
  ],
